<resources>
    <string name="app_name">CalcVent</string>
    <string name="tabItem1Name">Расход</string>
    <string name="tabItem2Name">Невязка</string>
    <string name="m3h">м3/ч</string>
    <string name="ms">м/с</string>
    <string name="mm">мм</string>

    //Строки содержащиеся в fragment_tab_item1
    <string name="textViewFlowText">Расход воздуха, G</string>
    <string name="textViewSpeedText">Скорость воздуха, V</string>
    <string name="defaultValue">100</string>
    <string name="DefaultHint"> </string>
    <string name="textViewSettingsText">Параметры воздуховода</string>
    <string name="radioButtonCircText">Круглый</string>
    <string name="radioButtonRectText">Квадратный</string>
    <string name="textViewRectAText">Сторона a</string>
    <string name="textViewRectBText">Сторона b</string>
    <string name="textViewCircText">Диаметр воздуховода</string>
    <string name="buttonFloatText">расход м3/ч</string>
    <string name="buttonSpeedText">Скорость м/с</string>

    //Строки содержащиеся в fragment_tab_item2
    <string name="textView1Text">Объёмный расход</string>
    <string name="textViewProject1Text">По проекту</string>
    <string name="textViewFact1Text">Фактический</string>
    <string name="textView2Text">Невязка</string>
    <string name="Percent">%</string>
    <string name="buttonCalcText">Посчитать невязку</string>

</resources>