<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTabItem2">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView1Text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProject1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textViewProject1Text"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberProject"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewFact1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textViewFact1Text"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberFact"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumberProject"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/DefaultHint"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textViewProject1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumberFact"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/DefaultHint"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textViewFact1"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberProject"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewProject2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m3h"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberProject"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberProject" />

    <TextView
        android:id="@+id/textViewFact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m3h"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberFact"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberFact" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView2Text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberFact" />

    <EditText
        android:id="@+id/editTextNumberResult"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/DefaultHint"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Percent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberResult"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberResult" />

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/buttonCalcText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberResult" />

</androidx.constraintlayout.widget.ConstraintLayout>